about com, port start

--- a/index.html
+++ b/index.html
@@ -50,46 +50,106 @@
           </div>
         </div>
         <div class="section profile">
-          <h2 class="profile_tit">About</h2>
+          <h2 class="profile_tit">
+            About / <span class="titde">Profile</span>
+          </h2>
           <div class="profilebox">
             <div class="imgbox">
               <img src="./images/profile_img.jpg" alt="프로필 사진" />
-              <p class="img_desc">
+              <span class="img_desc">
                 안녕하세요! 신입 웹퍼블리셔 서연주입니다!<br />
-              </p>
+              </span>
             </div>
             <div class="descbox">
-              <div class="desc_tit">
-                Profile
-                <p class="desc_name">서연주 / 1999.05.27</p>
+              <div class="desc_tit profile">
+                <span class="desc_name">서연주 / 1999.05.27</span>
               </div>
-              <ul class="desc_tit">
-                Education
+              <ul class="desc_tit education">
+                <span class="titde edutit">Education</span>
                 <li class="desc_list">
                   <span class="list_day">2024.01</span>
-                  웹디자인 기능사 필기 합격.
+                  <span>웹디자인 기능사 필기 합격.</span>
                 </li>
                 <li class="desc_list">
                   <span class="list_day">2023.11</span>
-                  스마트 웹콘텐츠 UI/UX 디자인 & 프론트엔드 과정 수료.
+                  <span
+                    >스마트 웹콘텐츠 UI/UX 디자인 & 프론트엔드 과정 수료.
+                  </span>
                 </li>
                 <li class="desc_list">
                   <span class="list_day">2023.06</span>
-                  UI/UX 모바일 웹 디자인(Figma) 과정 수료.
+                  <span>UI/UX 모바일 웹 디자인(Figma) 과정 수료. </span>
                 </li>
                 <li class="desc_list">
                   <span class="list_day">2022.02</span>
-                  한림성심대학교 관광외식경영학과 졸업
+                  <span>한림성심대학교 관광외식경영학과 졸업 </span>
                 </li>
               </ul>
-              <ul class="desc_tit">
-                Skill
-                <li class="desc_list"></li>
+              <ul class="desc_tit skill">
+                <span class="titde">Skill</span>
+                <li class="desc_list list_skill_logo">
+                  <img src="./images/logos_html-5.svg" alt="html5" />
+                </li>
+                <li class="desc_list list_skill_logo">
+                  <img src="./images/logos_css-3.svg" alt="css3" />
+                </li>
+                <li class="desc_list">
+                  <img
+                    src="./images/vscode-icons_file-type-js-official.svg"
+                    alt="js"
+                  />
+                </li>
+                <li class="desc_list">
+                  <img
+                    src="./images/vscode-icons_file-type-scss.svg"
+                    alt="scss"
+                  />
+                </li>
+                <li class="desc_list">
+                  <img
+                    src="./images/skill-icons_photoshop.svg"
+                    alt="photoshop"
+                  />
+                </li>
+                <li class="desc_list list_skill_logo">
+                  <img src="./images/logos_figma.svg" alt="figma" />
+                </li>
+                <li class="desc_list">
+                  <img
+                    src="./images/fluent-mdl2_git-hub-logo.svg"
+                    alt="github"
+                  />
+                </li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="section portfolio">portfolio</div>
+        <div class="section portfolio">
+          <h2 class="profile_tit">Portfolio</h2>
+          <div class="portbox">
+            <ul class="portzip">
+              <li class="portlist">
+                <div class="portlist_box">
+                  <img src="./images/10thFestar.svg" alt="10주년페스타" />
+                </div>
+              </li>
+              <li>
+                <div class="portlist">
+                  <div class="portlist_box">
+                    <img src="./images/soundwave.svg" alt="사운드웨이브" />
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="portlist">
+                  <div class="portlist_box">
+                    <img src="./images/lazuli.svg" alt="라줄리" />
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
         <div class="section contact">contact</div>
       </div>
       <!-- <footer class="section footer"></footer> -->
