--- a/index.html
+++ b/index.html
@@ -129,23 +129,104 @@
           <div class="portbox">
             <ul class="portzip">
               <li class="portlist">
-                <div class="portlist_box">
+                <div class="portlist_box festar">
                   <img src="./images/10thFestar.svg" alt="10주년페스타" />
                 </div>
+                <span class="portlist_desc"
+                  >문화가 있는 날 10주년 페스타 리디자인</span
+                >
+                <ul class="port_link">
+                  <li class="link_list">
+                    <a
+                      class="link_a"
+                      href="https://gguriman.me/onepage_festar/"
+                      target="_blank"
+                      >Web Site</a
+                    >
+                  </li>
+                  <li class="link_list">
+                    <a
+                      class="link_a"
+                      href="https://github.com/Yeeanjj/onepage_festar"
+                      target="_blank"
+                      >Git</a
+                    >
+                  </li>
+                  <li class="link_list">
+                    <a
+                      class="link_a"
+                      href="https://www.figma.com/file/QNEeAW80fbQHyjhreyLX3P/portfolio-10th-festar-(10%EC%A3%BC%EB%85%84-%ED%8E%98%EC%8A%A4%ED%83%80)?type=design&node-id=0-1&mode=design&t=L0vq69G7LUASRmOW-0"
+                      target="_blank"
+                      >Figma</a
+                    >
+                  </li>
+                </ul>
               </li>
-              <li>
-                <div class="portlist">
-                  <div class="portlist_box">
-                    <img src="./images/soundwave.svg" alt="사운드웨이브" />
-                  </div>
+              <li class="portlist">
+                <div class="portlist_box sound">
+                  <img src="./images/soundwave.svg" alt="사운드웨이브" />
                 </div>
+                <span class="portlist_desc">사운드 웨이브 리디자인</span>
+                <ul class="port_link">
+                  <li class="link_list">
+                    <a
+                      class="link_a"
+                      href="https://gguriman.me/html-soundwave/"
+                      target="_blank"
+                      >Web Site</a
+                    >
+                  </li>
+                  <li class="link_list">
+                    <a
+                      class="link_a"
+                      href="https://github.com/Yeeanjj/html-soundwave"
+                      target="_blank"
+                      >Git</a
+                    >
+                  </li>
+                  <li class="link_list">
+                    <a
+                      class="link_a"
+                      href="https://www.figma.com/file/NpeMvywtnWpSqycrj4JJkP/portfolio-soundwave?type=design&node-id=0-1&mode=design&t=YMWBYpyyftDMLUIG-0"
+                      target="_blank"
+                      >Figma</a
+                    >
+                  </li>
+                </ul>
               </li>
-              <li>
-                <div class="portlist">
-                  <div class="portlist_box">
-                    <img src="./images/lazuli.svg" alt="라줄리" />
-                  </div>
+              <li class="portlist">
+                <div class="portlist_box lazuli">
+                  <img src="./images/lazuli.svg" alt="라줄리" />
                 </div>
+                <span class="portlist_desc"
+                  >해리윈스턴 리디자인 및 한국어 사이트 제작 (mobile var.)
+                </span>
+                <ul class="port_link">
+                  <li class="link_list">
+                    <a
+                      class="link_a"
+                      href="https://oddodd.io/lazuli/"
+                      target="_blank"
+                      >Web Site</a
+                    >
+                  </li>
+                  <li class="link_list">
+                    <a
+                      class="link_a"
+                      href="https://github.com/Yeeanjj/lazuli"
+                      target="_blank"
+                      >Git</a
+                    >
+                  </li>
+                  <li class="link_list">
+                    <a
+                      class="link_a"
+                      href="https://www.figma.com/file/tdaHQSw8ZFN3Eq60Mle5nk/Lazuli?type=design&node-id=94-1549&mode=design&t=MtxrHG0ld1BHkk76-0"
+                      target="_blank"
+                      >Figma</a
+                    >
+                  </li>
+                </ul>
               </li>
             </ul>
           </div>
