--- a/index.html
+++ b/index.html
@@ -231,7 +231,9 @@
             </ul>
           </div>
         </div>
-        <div class="section contact">contact</div>
+        <div class="section contact">
+          <h2>contact</h2>
+        </div>
       </div>
       <!-- <footer class="section footer"></footer> -->
     </main>
