--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="./dist/css/fullpage.min.css" />
     <link rel="stylesheet" href="./dist/css/comm.css" />
     <script src="./dist/js/fullpage.min.js"></script>
@@ -57,7 +61,7 @@
             <div class="imgbox">
               <img src="./images/profile_img.jpg" alt="프로필 사진" />
               <span class="img_desc">
-                안녕하세요! 신입 웹퍼블리셔 서연주입니다!<br />
+                안녕하세요! 신입 웹퍼블리셔 서연주입니다!
               </span>
             </div>
             <div class="descbox">
@@ -232,7 +236,33 @@
           </div>
         </div>
         <div class="section contact">
-          <h2>contact</h2>
+          <h2 class="contact_tit">contact</h2>
+          <div class="infobox">
+            <div class="number">
+              <div class="number_icon">
+                <i class="fa-regular fa-envelope"
+                  ><span class="blind">email</span></i
+                >
+              </div>
+              <span class="number_desc">010-6375-8573</span>
+            </div>
+            <div class="email">
+              <div class="email_icon">
+                <i class="fa-solid fa-phone">
+                  <span class="blind">phon_namber</span>
+                </i>
+              </div>
+              <span class="email_desc">seaju0527@naver.com</span>
+            </div>
+            <div class="git">
+              <a
+                href="https://github.com/Yeeanjj"
+                target="_blank"
+                class="git_togo"
+                ><img src="./images/fluent-mdl2_git-hub-logo.svg" alt="github"
+              /></a>
+            </div>
+          </div>
         </div>
       </div>
       <!-- <footer class="section footer"></footer> -->
