--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="./dist/js/comm.js"></script>
   </head>
   <body>
-    <header id="header">
+    <!-- <header id="header">
       <h1 class="blind">menu</h1>
       <ul class="nav">
         <li class="nav_lst">
@@ -37,10 +37,10 @@
           <a href="#">Contact</a>
         </li>
       </ul>
-    </header>
+    </header> -->
     <main id="fullpage">
       <div class="fullpage">
-        <div class="section intro">
+        <div class="section intro" data-tooltip="intro">
           <h2 class="intro_animation">
             Y&nbsp;&nbsp;E&nbsp;&nbsp;X&nbsp;&nbsp;N&nbsp;'&nbsp;s
           </h2>
@@ -53,7 +53,7 @@
             </p>
           </div>
         </div>
-        <div class="section profile">
+        <div class="section profile" data-tooltip="profile">
           <h2 class="profile_tit">
             About / <span class="titde">Profile</span>
           </h2>
@@ -128,7 +128,7 @@
             </div>
           </div>
         </div>
-        <div class="section portfolio">
+        <div class="section portfolio" data-tooltip="portfolio">
           <h2 class="profile_tit">Portfolio</h2>
           <div class="portbox">
             <ul class="portzip">
@@ -236,32 +236,34 @@
           </div>
         </div>
         <div class="section contact">
-          <h2 class="contact_tit">contact</h2>
           <div class="infobox">
-            <div class="number">
-              <div class="number_icon">
+            <div class="email">
+              <div class="icon">
                 <i class="fa-regular fa-envelope"
                   ><span class="blind">email</span></i
                 >
               </div>
-              <span class="number_desc">010-6375-8573</span>
-            </div>
-            <div class="email">
-              <div class="email_icon">
-                <i class="fa-solid fa-phone">
-                  <span class="blind">phon_namber</span>
-                </i>
-              </div>
-              <span class="email_desc">seaju0527@naver.com</span>
+              <span class="con_desc">seaju0527@naver.com</span>
             </div>
             <div class="git">
               <a
                 href="https://github.com/Yeeanjj"
                 target="_blank"
                 class="git_togo"
-                ><img src="./images/fluent-mdl2_git-hub-logo.svg" alt="github"
-              /></a>
+                ><img
+                  src="./images/fluent-mdl2_git-hub-logo.svg"
+                  alt="github"
+                />
+                <span class="con_desc"> Yeeanjj </span>
+              </a>
             </div>
+          </div>
+          <div class="footdesc">
+            <p class="f_d">
+              본 페이지는 상업적 목적이 아닌 개인 포트폴리오용으로
+              제작되었습니다.
+            </p>
+            <p class="f_d">© 2024 SeoYeonju. All Rights Reserved.</p>
           </div>
         </div>
       </div>
@@ -272,7 +274,9 @@
         //options here
         autoScrolling: true,
         scrollHorizontally: true,
-        navigation: false,
+        navigation: true,
+        navigationTooltips: ["intro", "profile", "portfolio"],
+        showActiveTooltip: true,
       });
     </script>
   </body>
