--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="서연주 웹포트폴리오" />
+    <meta
+      property="og:description"
+      content="본 페이지는 상업적 목적이 아닌 개인 포트폴리오용으로
+    제작되었습니다."
+    />
+    <!-- <meta
+      property="og:url"
+      content="http://www.mysite.com/article/article1.html"
+    /> -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="페이지 제목" />
+    <meta name="twitter:description" content="페이지 설명" />
+    <meta
+      name="twitter:image"
+      content="http://www.mysite.com/article/article1.html"
+    />
+    <meta name="twitter:domain" content="사이트 명" />
     <title>웹 포트폴리오 : 서연주</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,20 +43,6 @@
     <script src="./dist/js/comm.js"></script>
   </head>
   <body>
-    <!-- <header id="header">
-      <h1 class="blind">menu</h1>
-      <ul class="nav">
-        <li class="nav_lst">
-          <a href="#">About</a>
-        </li>
-        <li class="nav_lst">
-          <a href="#">Portfolio</a>
-        </li>
-        <li class="nav_lst">
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-    </header> -->
     <main id="fullpage">
       <div class="fullpage">
         <div class="section intro" data-tooltip="intro">
