--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       content="http://www.mysite.com/article/article1.html"
     /> -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="페이지 제목" />
-    <meta name="twitter:description" content="페이지 설명" />
+    <meta name="twitter:title" content="서연주 웹포트폴리오" />
     <meta
-      name="twitter:image"
-      content="http://www.mysite.com/article/article1.html"
+      name="twitter:description"
+      content="본 페이지는 상업적 목적이 아닌 개인 포트폴리오용으로
+    제작되었습니다."
     />
-    <meta name="twitter:domain" content="사이트 명" />
+    <meta name="twitter:domain" content="http://www.gguriman.me" />
     <title>웹 포트폴리오 : 서연주</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
